--- a/pages/about.html
+++ b/pages/about.html
@@ -5,11 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="../Styles/about.css" />
+        <link rel="stylesheet" href="../Styles/global.css" />
         <title>Advay's Website - About</title>
     </head>
     <body>
         <nav>
-            <a class="nav-element">HOME</a>
+            <a class="nav-element" href="index.html">HOME</a>
             <a class="nav-element">GAMES</a>
             <a class="nav-element" href="./about.html">ABOUT</a>
         </nav>
