Finished About Page and Added Games page

--- a/pages/games.html
+++ b/pages/games.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="../Styles/about.css" />
+        <link rel="stylesheet" href="../Styles/games.css" />
         <link rel="stylesheet" href="../Styles/global.css" />
         <title>Advay's Website - About</title>
     </head>
@@ -17,23 +17,18 @@
             <a class="nav-element" href="#">VIDEOS</a>
         </nav>
 
-        <img
-            alt="A picture of me"
-            src="../Images/PhotoOfMe.jpg"
-            id="my-photo"
-        />
-
-        <img
-            alt="The logo of my school (Skyline High)"
-            src="../Images/skylinelogo.jpg"
-            id="skyline-logo"
-        />
-
         <div id="content">
-            <p>I am currently 15 years old. I enjoy doing</p>
-            <p>math and making games. I have been programming</p>
-            <p>since November 2020 and making games since</p>
-            <p>January 2021. I go to skyline high school.</p>
+            Here are some games that I have made
+            <br />
+            <div class="game-display">
+                <a><img class="game-image" src="../Images/checkers.PNG" /> </a>
+                <div class="game-text">Checkers</div>
+            </div>
+            <div class="game-display">
+                <a></a>
+                <img class="game-image" src="../Images/connect4.PNG" />
+                <div class="game-text">Connect 4</div>
+            </div>
         </div>
     </body>
 </html>
