--- a/pages/index.html
+++ b/pages/index.html
@@ -10,9 +10,11 @@
     </head>
     <body>
         <nav>
+            <img src="../Images/logo.png" class="nav-element" />
             <a class="nav-element" href="#">HOME</a>
             <a class="nav-element">GAMES</a>
             <a class="nav-element" href="./about.html">ABOUT</a>
+            <a class="nav-element" href="#">VIDEOS</a>
         </nav>
 
         <div id="content">
